parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID PUNTO_COMA vars salto_principal body END
Rule 2     salto_principal -> <empty>
Rule 3     vars -> var_body
Rule 4     vars -> <empty>
Rule 5     var_body -> VAR type ID array PUNTO_COMA var_loop
Rule 6     array -> ABRIR_CORCH CTE_I CERRAR_CORCH
Rule 7     array -> <empty>
Rule 8     var_loop -> var_body
Rule 9     var_loop -> <empty>
Rule 10    type -> INT
Rule 11    type -> FLOAT
Rule 12    type -> STRING
Rule 13    type -> BOOL
Rule 14    body -> functions fmain
Rule 15    functions -> FUNC functions2
Rule 16    functions -> <empty>
Rule 17    functions2 -> functions_body functions_params func_block functions_loop
Rule 18    functions2 -> functions_body_void functions_params block ret_void functions_loop
Rule 19    functions2 -> <empty>
Rule 20    ret_void -> <empty>
Rule 21    func_block -> ABRIR_LLAVE estatuto_loop return CERRAR_LLAVE
Rule 22    functions_body -> type ID
Rule 23    functions_body_void -> VOID ID
Rule 24    return -> RETURN expression PUNTO_COMA
Rule 25    functions_loop -> FUNC functions_aux
Rule 26    functions_loop -> <empty>
Rule 27    functions_aux -> functions_body functions_params func_block functions_loop
Rule 28    functions_aux -> functions_body_void functions_params block functions_loop
Rule 29    functions_params -> ABRIR_PRNT params_aux CERRAR_PRNT
Rule 30    params_aux -> params params_loop
Rule 31    params_aux -> <empty>
Rule 32    params -> type ID
Rule 33    params_loop_aux -> params params_loop
Rule 34    params_loop -> COMA params_loop_aux
Rule 35    params_loop -> <empty>
Rule 36    block -> ABRIR_LLAVE estatuto_loop CERRAR_LLAVE
Rule 37    fmain -> fmain_aux block
Rule 38    fmain_aux -> MAIN ABRIR_PRNT CERRAR_PRNT
Rule 39    estatuto_loop -> estatuto estatuto_loop
Rule 40    estatuto_loop -> <empty>
Rule 41    estatuto -> condition
Rule 42    estatuto -> loop
Rule 43    estatuto -> ID estatuto_aux
Rule 44    estatuto -> fprint
Rule 45    estatuto -> special_function
Rule 46    estatuto -> var_body
Rule 47    estatuto_aux -> call
Rule 48    estatuto_aux -> assignment
Rule 49    fprint -> PRINT ABRIR_PRNT write_choice CERRAR_PRNT PUNTO_COMA
Rule 50    write_choice -> expression
Rule 51    write_choice -> const_string
Rule 52    const_string -> CTE_S
Rule 53    condition -> IF ABRIR_PRNT expression ifcuad1 CERRAR_PRNT block ifcuad2 else ifcuad3
Rule 54    else -> ELSE block
Rule 55    else -> <empty>
Rule 56    loop -> while
Rule 57    loop -> do_while
Rule 58    while -> WHILE ABRIR_PRNT whilecuad1 expression whilecuad2 CERRAR_PRNT block whilecuad3
Rule 59    do_while -> DO docuad1 block WHILE ABRIR_PRNT expression docuad2 CERRAR_PRNT PUNTO_COMA
Rule 60    assignment -> push_operando IGUAL push_operador expression PUNTO_COMA
Rule 61    expression -> exp exp_aux_pila expression_choice
Rule 62    expression_choice -> expression_choice_aux
Rule 63    expression_choice -> <empty>
Rule 64    expression_choice_aux -> IGUALDAD push_operador exp
Rule 65    expression_choice_aux -> DESIGUALDAD push_operador exp exp_aux_pila
Rule 66    expression_choice_aux -> MAYOR_QUE push_operador exp exp_aux_pila
Rule 67    expression_choice_aux -> MENOR_QUE push_operador exp exp_aux_pila
Rule 68    expression_choice_aux -> MAYOR_IGUAL push_operador exp exp_aux_pila
Rule 69    expression_choice_aux -> MENOR_IGUAL push_operador exp exp_aux_pila
Rule 70    exp -> term term_aux_pila exp_choice
Rule 71    exp_choice -> exp_aux
Rule 72    exp_choice -> <empty>
Rule 73    exp_aux_pila -> <empty>
Rule 74    exp_aux -> SUMA push_operador exp
Rule 75    exp_aux -> RESTA push_operador exp
Rule 76    term -> factor term_choice
Rule 77    term_choice -> term_aux
Rule 78    term_choice -> <empty>
Rule 79    term_aux_pila -> <empty>
Rule 80    term_aux -> MULTIPLICACION push_operador term
Rule 81    term_aux -> DIVISION push_operador term
Rule 82    factor -> ABRIR_PRNT expression CERRAR_PRNT
Rule 83    factor -> var_cte
Rule 84    var_cte -> const_int
Rule 85    var_cte -> const_float
Rule 86    var_cte -> const_bool
Rule 87    var_cte -> ABRIR_CORCH CTE_I CERRAR_CORCH
Rule 88    var_cte -> ID var_decision
Rule 89    var_decision -> var_func
Rule 90    var_decision -> push_operando
Rule 91    const_int -> CTE_I push_operando
Rule 92    const_float -> CTE_F push_operando
Rule 93    const_bool -> TRUE push_operando
Rule 94    const_bool -> FALSE push_operando
Rule 95    call -> var_func PUNTO_COMA
Rule 96    var_func -> ABRIR_PRNT params_call_aux CERRAR_PRNT
Rule 97    params_call_aux -> params_call params_call_loop
Rule 98    params_call_aux -> <empty>
Rule 99    params_call -> expression
Rule 100   params_call_loop -> COMA params_call_loop_aux
Rule 101   params_call_loop -> <empty>
Rule 102   params_call_loop_aux -> params_call params_call_loop
Rule 103   special_function -> fpen_up
Rule 104   special_function -> fpen_down
Rule 105   special_function -> ferase
Rule 106   special_function -> fturn_left
Rule 107   special_function -> fturn_right
Rule 108   special_function -> fmove
Rule 109   fpen_up -> PENUP ABRIR_PRNT CERRAR_PRNT PUNTO_COMA
Rule 110   fpen_down -> PENDOWN ABRIR_PRNT CERRAR_PRNT PUNTO_COMA
Rule 111   ferase -> ERASE ABRIR_PRNT CERRAR_PRNT PUNTO_COMA
Rule 112   fturn_left -> TURNLEFT ABRIR_PRNT expression CERRAR_PRNT PUNTO_COMA
Rule 113   fturn_right -> TURNRIGHT ABRIR_PRNT expression CERRAR_PRNT PUNTO_COMA
Rule 114   fmove -> MOVE ABRIR_PRNT direction COMA expression CERRAR_PRNT PUNTO_COMA
Rule 115   direction -> FORWARD
Rule 116   direction -> BACKWARD
Rule 117   push_operando -> <empty>
Rule 118   push_operador -> <empty>
Rule 119   ifcuad1 -> <empty>
Rule 120   ifcuad2 -> <empty>
Rule 121   ifcuad3 -> <empty>
Rule 122   whilecuad1 -> <empty>
Rule 123   whilecuad2 -> <empty>
Rule 124   whilecuad3 -> <empty>
Rule 125   docuad1 -> <empty>
Rule 126   docuad2 -> <empty>

Terminals, with rules where they appear

ABRIR_CORCH          : 6 87
ABRIR_LLAVE          : 21 36
ABRIR_PRNT           : 29 38 49 53 58 59 82 96 109 110 111 112 113 114
BACKWARD             : 116
BOOL                 : 13
CERRAR_CORCH         : 6 87
CERRAR_LLAVE         : 21 36
CERRAR_PRNT          : 29 38 49 53 58 59 82 96 109 110 111 112 113 114
COMA                 : 34 100 114
CTE_F                : 92
CTE_I                : 6 87 91
CTE_S                : 52
DESIGUALDAD          : 65
DIVISION             : 81
DO                   : 59
ELSE                 : 54
END                  : 1
ERASE                : 111
FALSE                : 94
FLOAT                : 11
FORWARD              : 115
FUNC                 : 15 25
ID                   : 1 5 22 23 32 43 88
IF                   : 53
IGUAL                : 60
IGUALDAD             : 64
INT                  : 10
MAIN                 : 38
MAYOR_IGUAL          : 68
MAYOR_QUE            : 66
MENOR_IGUAL          : 69
MENOR_QUE            : 67
MOVE                 : 114
MULTIPLICACION       : 80
PENDOWN              : 110
PENUP                : 109
PRINT                : 49
PROGRAM              : 1
PUNTO_COMA           : 1 5 24 49 59 60 95 109 110 111 112 113 114
RESTA                : 75
RETURN               : 24
STRING               : 12
SUMA                 : 74
TRUE                 : 93
TURNLEFT             : 112
TURNRIGHT            : 113
VAR                  : 5
VOID                 : 23
WHILE                : 58 59
error                : 

Nonterminals, with rules where they appear

array                : 5
assignment           : 48
block                : 18 28 37 53 54 58 59
body                 : 1
call                 : 47
condition            : 41
const_bool           : 86
const_float          : 85
const_int            : 84
const_string         : 51
direction            : 114
do_while             : 57
docuad1              : 59
docuad2              : 59
else                 : 53
estatuto             : 39
estatuto_aux         : 43
estatuto_loop        : 21 36 39
exp                  : 61 64 65 66 67 68 69 74 75
exp_aux              : 71
exp_aux_pila         : 61 65 66 67 68 69
exp_choice           : 70
expression           : 24 50 53 58 59 60 82 99 112 113 114
expression_choice    : 61
expression_choice_aux : 62
factor               : 76
ferase               : 105
fmain                : 14
fmain_aux            : 37
fmove                : 108
fpen_down            : 104
fpen_up              : 103
fprint               : 44
fturn_left           : 106
fturn_right          : 107
func_block           : 17 27
functions            : 14
functions2           : 15
functions_aux        : 25
functions_body       : 17 27
functions_body_void  : 18 28
functions_loop       : 17 18 27 28
functions_params     : 17 18 27 28
ifcuad1              : 53
ifcuad2              : 53
ifcuad3              : 53
loop                 : 42
params               : 30 33
params_aux           : 29
params_call          : 97 102
params_call_aux      : 96
params_call_loop     : 97 102
params_call_loop_aux : 100
params_loop          : 30 33
params_loop_aux      : 34
program              : 0
push_operador        : 60 64 65 66 67 68 69 74 75 80 81
push_operando        : 60 90 91 92 93 94
ret_void             : 18
return               : 21
salto_principal      : 1
special_function     : 45
term                 : 70 80 81
term_aux             : 77
term_aux_pila        : 70
term_choice          : 76
type                 : 5 22 32
var_body             : 3 8 46
var_cte              : 83
var_decision         : 88
var_func             : 89 95
var_loop             : 5
vars                 : 1
while                : 56
whilecuad1           : 58
whilecuad2           : 58
whilecuad3           : 58
write_choice         : 49

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID PUNTO_COMA vars salto_principal body END

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID PUNTO_COMA vars salto_principal body END

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . PUNTO_COMA vars salto_principal body END

    PUNTO_COMA      shift and go to state 4


state 4

    (1) program -> PROGRAM ID PUNTO_COMA . vars salto_principal body END
    (3) vars -> . var_body
    (4) vars -> .
    (5) var_body -> . VAR type ID array PUNTO_COMA var_loop

    FUNC            reduce using rule 4 (vars -> .)
    MAIN            reduce using rule 4 (vars -> .)
    VAR             shift and go to state 7

    vars                           shift and go to state 5
    var_body                       shift and go to state 6

state 5

    (1) program -> PROGRAM ID PUNTO_COMA vars . salto_principal body END
    (2) salto_principal -> .

    FUNC            reduce using rule 2 (salto_principal -> .)
    MAIN            reduce using rule 2 (salto_principal -> .)

    salto_principal                shift and go to state 8

state 6

    (3) vars -> var_body .

    FUNC            reduce using rule 3 (vars -> var_body .)
    MAIN            reduce using rule 3 (vars -> var_body .)


state 7

    (5) var_body -> VAR . type ID array PUNTO_COMA var_loop
    (10) type -> . INT
    (11) type -> . FLOAT
    (12) type -> . STRING
    (13) type -> . BOOL

    INT             shift and go to state 11
    FLOAT           shift and go to state 9
    STRING          shift and go to state 10
    BOOL            shift and go to state 12

    type                           shift and go to state 13

state 8

    (1) program -> PROGRAM ID PUNTO_COMA vars salto_principal . body END
    (14) body -> . functions fmain
    (15) functions -> . FUNC functions2
    (16) functions -> .

    FUNC            shift and go to state 16
    MAIN            reduce using rule 16 (functions -> .)

    body                           shift and go to state 14
    functions                      shift and go to state 15

state 9

    (11) type -> FLOAT .

    ID              reduce using rule 11 (type -> FLOAT .)


state 10

    (12) type -> STRING .

    ID              reduce using rule 12 (type -> STRING .)


state 11

    (10) type -> INT .

    ID              reduce using rule 10 (type -> INT .)


state 12

    (13) type -> BOOL .

    ID              reduce using rule 13 (type -> BOOL .)


state 13

    (5) var_body -> VAR type . ID array PUNTO_COMA var_loop

    ID              shift and go to state 17


state 14

    (1) program -> PROGRAM ID PUNTO_COMA vars salto_principal body . END

    END             shift and go to state 18


state 15

    (14) body -> functions . fmain
    (37) fmain -> . fmain_aux block
    (38) fmain_aux -> . MAIN ABRIR_PRNT CERRAR_PRNT

    MAIN            shift and go to state 20

    fmain                          shift and go to state 21
    fmain_aux                      shift and go to state 19

state 16

    (15) functions -> FUNC . functions2
    (17) functions2 -> . functions_body functions_params func_block functions_loop
    (18) functions2 -> . functions_body_void functions_params block ret_void functions_loop
    (19) functions2 -> .
    (22) functions_body -> . type ID
    (23) functions_body_void -> . VOID ID
    (10) type -> . INT
    (11) type -> . FLOAT
    (12) type -> . STRING
    (13) type -> . BOOL

    MAIN            reduce using rule 19 (functions2 -> .)
    VOID            shift and go to state 24
    INT             shift and go to state 11
    FLOAT           shift and go to state 9
    STRING          shift and go to state 10
    BOOL            shift and go to state 12

    functions_body                 shift and go to state 22
    type                           shift and go to state 23
    functions2                     shift and go to state 25
    functions_body_void            shift and go to state 26

state 17

    (5) var_body -> VAR type ID . array PUNTO_COMA var_loop
    (6) array -> . ABRIR_CORCH CTE_I CERRAR_CORCH
    (7) array -> .

    ABRIR_CORCH     shift and go to state 27
    PUNTO_COMA      reduce using rule 7 (array -> .)

    array                          shift and go to state 28

state 18

    (1) program -> PROGRAM ID PUNTO_COMA vars salto_principal body END .

    $end            reduce using rule 1 (program -> PROGRAM ID PUNTO_COMA vars salto_principal body END .)


state 19

    (37) fmain -> fmain_aux . block
    (36) block -> . ABRIR_LLAVE estatuto_loop CERRAR_LLAVE

    ABRIR_LLAVE     shift and go to state 29

    block                          shift and go to state 30

state 20

    (38) fmain_aux -> MAIN . ABRIR_PRNT CERRAR_PRNT

    ABRIR_PRNT      shift and go to state 31


state 21

    (14) body -> functions fmain .

    END             reduce using rule 14 (body -> functions fmain .)


state 22

    (17) functions2 -> functions_body . functions_params func_block functions_loop
    (29) functions_params -> . ABRIR_PRNT params_aux CERRAR_PRNT

    ABRIR_PRNT      shift and go to state 33

    functions_params               shift and go to state 32

state 23

    (22) functions_body -> type . ID

    ID              shift and go to state 34


state 24

    (23) functions_body_void -> VOID . ID

    ID              shift and go to state 35


state 25

    (15) functions -> FUNC functions2 .

    MAIN            reduce using rule 15 (functions -> FUNC functions2 .)


state 26

    (18) functions2 -> functions_body_void . functions_params block ret_void functions_loop
    (29) functions_params -> . ABRIR_PRNT params_aux CERRAR_PRNT

    ABRIR_PRNT      shift and go to state 33

    functions_params               shift and go to state 36

state 27

    (6) array -> ABRIR_CORCH . CTE_I CERRAR_CORCH

    CTE_I           shift and go to state 37


state 28

    (5) var_body -> VAR type ID array . PUNTO_COMA var_loop

    PUNTO_COMA      shift and go to state 38


state 29

    (36) block -> ABRIR_LLAVE . estatuto_loop CERRAR_LLAVE
    (39) estatuto_loop -> . estatuto estatuto_loop
    (40) estatuto_loop -> .
    (41) estatuto -> . condition
    (42) estatuto -> . loop
    (43) estatuto -> . ID estatuto_aux
    (44) estatuto -> . fprint
    (45) estatuto -> . special_function
    (46) estatuto -> . var_body
    (53) condition -> . IF ABRIR_PRNT expression ifcuad1 CERRAR_PRNT block ifcuad2 else ifcuad3
    (56) loop -> . while
    (57) loop -> . do_while
    (49) fprint -> . PRINT ABRIR_PRNT write_choice CERRAR_PRNT PUNTO_COMA
    (103) special_function -> . fpen_up
    (104) special_function -> . fpen_down
    (105) special_function -> . ferase
    (106) special_function -> . fturn_left
    (107) special_function -> . fturn_right
    (108) special_function -> . fmove
    (5) var_body -> . VAR type ID array PUNTO_COMA var_loop
    (58) while -> . WHILE ABRIR_PRNT whilecuad1 expression whilecuad2 CERRAR_PRNT block whilecuad3
    (59) do_while -> . DO docuad1 block WHILE ABRIR_PRNT expression docuad2 CERRAR_PRNT PUNTO_COMA
    (109) fpen_up -> . PENUP ABRIR_PRNT CERRAR_PRNT PUNTO_COMA
    (110) fpen_down -> . PENDOWN ABRIR_PRNT CERRAR_PRNT PUNTO_COMA
    (111) ferase -> . ERASE ABRIR_PRNT CERRAR_PRNT PUNTO_COMA
    (112) fturn_left -> . TURNLEFT ABRIR_PRNT expression CERRAR_PRNT PUNTO_COMA
    (113) fturn_right -> . TURNRIGHT ABRIR_PRNT expression CERRAR_PRNT PUNTO_COMA
    (114) fmove -> . MOVE ABRIR_PRNT direction COMA expression CERRAR_PRNT PUNTO_COMA

    CERRAR_LLAVE    reduce using rule 40 (estatuto_loop -> .)
    ID              shift and go to state 57
    IF              shift and go to state 59
    PRINT           shift and go to state 44
    VAR             shift and go to state 7
    WHILE           shift and go to state 42
    DO              shift and go to state 41
    PENUP           shift and go to state 45
    PENDOWN         shift and go to state 47
    ERASE           shift and go to state 62
    TURNLEFT        shift and go to state 53
    TURNRIGHT       shift and go to state 56
    MOVE            shift and go to state 39

    fmove                          shift and go to state 40
    fturn_left                     shift and go to state 61
    estatuto                       shift and go to state 46
    fturn_right                    shift and go to state 49
    condition                      shift and go to state 58
    fpen_up                        shift and go to state 51
    fpen_down                      shift and go to state 52
    do_while                       shift and go to state 64
    special_function               shift and go to state 54
    var_body                       shift and go to state 55
    estatuto_loop                  shift and go to state 48
    ferase                         shift and go to state 50
    fprint                         shift and go to state 60
    while                          shift and go to state 63
    loop                           shift and go to state 43

state 30

    (37) fmain -> fmain_aux block .

    END             reduce using rule 37 (fmain -> fmain_aux block .)


state 31

    (38) fmain_aux -> MAIN ABRIR_PRNT . CERRAR_PRNT

    CERRAR_PRNT     shift and go to state 65


state 32

    (17) functions2 -> functions_body functions_params . func_block functions_loop
    (21) func_block -> . ABRIR_LLAVE estatuto_loop return CERRAR_LLAVE

    ABRIR_LLAVE     shift and go to state 67

    func_block                     shift and go to state 66

state 33

    (29) functions_params -> ABRIR_PRNT . params_aux CERRAR_PRNT
    (30) params_aux -> . params params_loop
    (31) params_aux -> .
    (32) params -> . type ID
    (10) type -> . INT
    (11) type -> . FLOAT
    (12) type -> . STRING
    (13) type -> . BOOL

    CERRAR_PRNT     reduce using rule 31 (params_aux -> .)
    INT             shift and go to state 11
    FLOAT           shift and go to state 9
    STRING          shift and go to state 10
    BOOL            shift and go to state 12

    type                           shift and go to state 70
    params_aux                     shift and go to state 68
    params                         shift and go to state 69

state 34

    (22) functions_body -> type ID .

    ABRIR_PRNT      reduce using rule 22 (functions_body -> type ID .)


state 35

    (23) functions_body_void -> VOID ID .

    ABRIR_PRNT      reduce using rule 23 (functions_body_void -> VOID ID .)


state 36

    (18) functions2 -> functions_body_void functions_params . block ret_void functions_loop
    (36) block -> . ABRIR_LLAVE estatuto_loop CERRAR_LLAVE

    ABRIR_LLAVE     shift and go to state 29

    block                          shift and go to state 71

state 37

    (6) array -> ABRIR_CORCH CTE_I . CERRAR_CORCH

    CERRAR_CORCH    shift and go to state 72


state 38

    (5) var_body -> VAR type ID array PUNTO_COMA . var_loop
    (8) var_loop -> . var_body
    (9) var_loop -> .
    (5) var_body -> . VAR type ID array PUNTO_COMA var_loop

  ! shift/reduce conflict for VAR resolved as shift
    FUNC            reduce using rule 9 (var_loop -> .)
    MAIN            reduce using rule 9 (var_loop -> .)
    ID              reduce using rule 9 (var_loop -> .)
    IF              reduce using rule 9 (var_loop -> .)
    PRINT           reduce using rule 9 (var_loop -> .)
    WHILE           reduce using rule 9 (var_loop -> .)
    DO              reduce using rule 9 (var_loop -> .)
    PENUP           reduce using rule 9 (var_loop -> .)
    PENDOWN         reduce using rule 9 (var_loop -> .)
    ERASE           reduce using rule 9 (var_loop -> .)
    TURNLEFT        reduce using rule 9 (var_loop -> .)
    TURNRIGHT       reduce using rule 9 (var_loop -> .)
    MOVE            reduce using rule 9 (var_loop -> .)
    CERRAR_LLAVE    reduce using rule 9 (var_loop -> .)
    RETURN          reduce using rule 9 (var_loop -> .)
    VAR             shift and go to state 7

  ! VAR             [ reduce using rule 9 (var_loop -> .) ]

    var_loop                       shift and go to state 73
    var_body                       shift and go to state 74

state 39

    (114) fmove -> MOVE . ABRIR_PRNT direction COMA expression CERRAR_PRNT PUNTO_COMA

    ABRIR_PRNT      shift and go to state 75


state 40

    (108) special_function -> fmove .

    ID              reduce using rule 108 (special_function -> fmove .)
    IF              reduce using rule 108 (special_function -> fmove .)
    PRINT           reduce using rule 108 (special_function -> fmove .)
    VAR             reduce using rule 108 (special_function -> fmove .)
    WHILE           reduce using rule 108 (special_function -> fmove .)
    DO              reduce using rule 108 (special_function -> fmove .)
    PENUP           reduce using rule 108 (special_function -> fmove .)
    PENDOWN         reduce using rule 108 (special_function -> fmove .)
    ERASE           reduce using rule 108 (special_function -> fmove .)
    TURNLEFT        reduce using rule 108 (special_function -> fmove .)
    TURNRIGHT       reduce using rule 108 (special_function -> fmove .)
    MOVE            reduce using rule 108 (special_function -> fmove .)
    CERRAR_LLAVE    reduce using rule 108 (special_function -> fmove .)
    RETURN          reduce using rule 108 (special_function -> fmove .)


state 41

    (59) do_while -> DO . docuad1 block WHILE ABRIR_PRNT expression docuad2 CERRAR_PRNT PUNTO_COMA
    (125) docuad1 -> .

    ABRIR_LLAVE     reduce using rule 125 (docuad1 -> .)

    docuad1                        shift and go to state 76

state 42

    (58) while -> WHILE . ABRIR_PRNT whilecuad1 expression whilecuad2 CERRAR_PRNT block whilecuad3

    ABRIR_PRNT      shift and go to state 77


state 43

    (42) estatuto -> loop .

    ID              reduce using rule 42 (estatuto -> loop .)
    IF              reduce using rule 42 (estatuto -> loop .)
    PRINT           reduce using rule 42 (estatuto -> loop .)
    VAR             reduce using rule 42 (estatuto -> loop .)
    WHILE           reduce using rule 42 (estatuto -> loop .)
    DO              reduce using rule 42 (estatuto -> loop .)
    PENUP           reduce using rule 42 (estatuto -> loop .)
    PENDOWN         reduce using rule 42 (estatuto -> loop .)
    ERASE           reduce using rule 42 (estatuto -> loop .)
    TURNLEFT        reduce using rule 42 (estatuto -> loop .)
    TURNRIGHT       reduce using rule 42 (estatuto -> loop .)
    MOVE            reduce using rule 42 (estatuto -> loop .)
    RETURN          reduce using rule 42 (estatuto -> loop .)
    CERRAR_LLAVE    reduce using rule 42 (estatuto -> loop .)


state 44

    (49) fprint -> PRINT . ABRIR_PRNT write_choice CERRAR_PRNT PUNTO_COMA

    ABRIR_PRNT      shift and go to state 78


state 45

    (109) fpen_up -> PENUP . ABRIR_PRNT CERRAR_PRNT PUNTO_COMA

    ABRIR_PRNT      shift and go to state 79


state 46

    (39) estatuto_loop -> estatuto . estatuto_loop
    (39) estatuto_loop -> . estatuto estatuto_loop
    (40) estatuto_loop -> .
    (41) estatuto -> . condition
    (42) estatuto -> . loop
    (43) estatuto -> . ID estatuto_aux
    (44) estatuto -> . fprint
    (45) estatuto -> . special_function
    (46) estatuto -> . var_body
    (53) condition -> . IF ABRIR_PRNT expression ifcuad1 CERRAR_PRNT block ifcuad2 else ifcuad3
    (56) loop -> . while
    (57) loop -> . do_while
    (49) fprint -> . PRINT ABRIR_PRNT write_choice CERRAR_PRNT PUNTO_COMA
    (103) special_function -> . fpen_up
    (104) special_function -> . fpen_down
    (105) special_function -> . ferase
    (106) special_function -> . fturn_left
    (107) special_function -> . fturn_right
    (108) special_function -> . fmove
    (5) var_body -> . VAR type ID array PUNTO_COMA var_loop
    (58) while -> . WHILE ABRIR_PRNT whilecuad1 expression whilecuad2 CERRAR_PRNT block whilecuad3
    (59) do_while -> . DO docuad1 block WHILE ABRIR_PRNT expression docuad2 CERRAR_PRNT PUNTO_COMA
    (109) fpen_up -> . PENUP ABRIR_PRNT CERRAR_PRNT PUNTO_COMA
    (110) fpen_down -> . PENDOWN ABRIR_PRNT CERRAR_PRNT PUNTO_COMA
    (111) ferase -> . ERASE ABRIR_PRNT CERRAR_PRNT PUNTO_COMA
    (112) fturn_left -> . TURNLEFT ABRIR_PRNT expression CERRAR_PRNT PUNTO_COMA
    (113) fturn_right -> . TURNRIGHT ABRIR_PRNT expression CERRAR_PRNT PUNTO_COMA
    (114) fmove -> . MOVE ABRIR_PRNT direction COMA expression CERRAR_PRNT PUNTO_COMA

    CERRAR_LLAVE    reduce using rule 40 (estatuto_loop -> .)
    RETURN          reduce using rule 40 (estatuto_loop -> .)
    ID              shift and go to state 57
    IF              shift and go to state 59
    PRINT           shift and go to state 44
    VAR             shift and go to state 7
    WHILE           shift and go to state 42
    DO              shift and go to state 41
    PENUP           shift and go to state 45
    PENDOWN         shift and go to state 47
    ERASE           shift and go to state 62
    TURNLEFT        shift and go to state 53
    TURNRIGHT       shift and go to state 56
    MOVE            shift and go to state 39

    fmove                          shift and go to state 40
    fturn_left                     shift and go to state 61
    estatuto                       shift and go to state 46
    fturn_right                    shift and go to state 49
    condition                      shift and go to state 58
    fpen_up                        shift and go to state 51
    fpen_down                      shift and go to state 52
    do_while                       shift and go to state 64
    special_function               shift and go to state 54
    var_body                       shift and go to state 55
    estatuto_loop                  shift and go to state 80
    ferase                         shift and go to state 50
    fprint                         shift and go to state 60
    while                          shift and go to state 63
    loop                           shift and go to state 43

state 47

    (110) fpen_down -> PENDOWN . ABRIR_PRNT CERRAR_PRNT PUNTO_COMA

    ABRIR_PRNT      shift and go to state 81


state 48

    (36) block -> ABRIR_LLAVE estatuto_loop . CERRAR_LLAVE

    CERRAR_LLAVE    shift and go to state 82


state 49

    (107) special_function -> fturn_right .

    ID              reduce using rule 107 (special_function -> fturn_right .)
    IF              reduce using rule 107 (special_function -> fturn_right .)
    PRINT           reduce using rule 107 (special_function -> fturn_right .)
    VAR             reduce using rule 107 (special_function -> fturn_right .)
    WHILE           reduce using rule 107 (special_function -> fturn_right .)
    DO              reduce using rule 107 (special_function -> fturn_right .)
    PENUP           reduce using rule 107 (special_function -> fturn_right .)
    PENDOWN         reduce using rule 107 (special_function -> fturn_right .)
    ERASE           reduce using rule 107 (special_function -> fturn_right .)
    TURNLEFT        reduce using rule 107 (special_function -> fturn_right .)
    TURNRIGHT       reduce using rule 107 (special_function -> fturn_right .)
    MOVE            reduce using rule 107 (special_function -> fturn_right .)
    CERRAR_LLAVE    reduce using rule 107 (special_function -> fturn_right .)
    RETURN          reduce using rule 107 (special_function -> fturn_right .)


state 50

    (105) special_function -> ferase .

    ID              reduce using rule 105 (special_function -> ferase .)
    IF              reduce using rule 105 (special_function -> ferase .)
    PRINT           reduce using rule 105 (special_function -> ferase .)
    VAR             reduce using rule 105 (special_function -> ferase .)
    WHILE           reduce using rule 105 (special_function -> ferase .)
    DO              reduce using rule 105 (special_function -> ferase .)
    PENUP           reduce using rule 105 (special_function -> ferase .)
    PENDOWN         reduce using rule 105 (special_function -> ferase .)
    ERASE           reduce using rule 105 (special_function -> ferase .)
    TURNLEFT        reduce using rule 105 (special_function -> ferase .)
    TURNRIGHT       reduce using rule 105 (special_function -> ferase .)
    MOVE            reduce using rule 105 (special_function -> ferase .)
    CERRAR_LLAVE    reduce using rule 105 (special_function -> ferase .)
    RETURN          reduce using rule 105 (special_function -> ferase .)


state 51

    (103) special_function -> fpen_up .

    ID              reduce using rule 103 (special_function -> fpen_up .)
    IF              reduce using rule 103 (special_function -> fpen_up .)
    PRINT           reduce using rule 103 (special_function -> fpen_up .)
    VAR             reduce using rule 103 (special_function -> fpen_up .)
    WHILE           reduce using rule 103 (special_function -> fpen_up .)
    DO              reduce using rule 103 (special_function -> fpen_up .)
    PENUP           reduce using rule 103 (special_function -> fpen_up .)
    PENDOWN         reduce using rule 103 (special_function -> fpen_up .)
    ERASE           reduce using rule 103 (special_function -> fpen_up .)
    TURNLEFT        reduce using rule 103 (special_function -> fpen_up .)
    TURNRIGHT       reduce using rule 103 (special_function -> fpen_up .)
    MOVE            reduce using rule 103 (special_function -> fpen_up .)
    CERRAR_LLAVE    reduce using rule 103 (special_function -> fpen_up .)
    RETURN          reduce using rule 103 (special_function -> fpen_up .)


state 52

    (104) special_function -> fpen_down .

    ID              reduce using rule 104 (special_function -> fpen_down .)
    IF              reduce using rule 104 (special_function -> fpen_down .)
    PRINT           reduce using rule 104 (special_function -> fpen_down .)
    VAR             reduce using rule 104 (special_function -> fpen_down .)
    WHILE           reduce using rule 104 (special_function -> fpen_down .)
    DO              reduce using rule 104 (special_function -> fpen_down .)
    PENUP           reduce using rule 104 (special_function -> fpen_down .)
    PENDOWN         reduce using rule 104 (special_function -> fpen_down .)
    ERASE           reduce using rule 104 (special_function -> fpen_down .)
    TURNLEFT        reduce using rule 104 (special_function -> fpen_down .)
    TURNRIGHT       reduce using rule 104 (special_function -> fpen_down .)
    MOVE            reduce using rule 104 (special_function -> fpen_down .)
    CERRAR_LLAVE    reduce using rule 104 (special_function -> fpen_down .)
    RETURN          reduce using rule 104 (special_function -> fpen_down .)


state 53

    (112) fturn_left -> TURNLEFT . ABRIR_PRNT expression CERRAR_PRNT PUNTO_COMA

    ABRIR_PRNT      shift and go to state 83


state 54

    (45) estatuto -> special_function .

    ID              reduce using rule 45 (estatuto -> special_function .)
    IF              reduce using rule 45 (estatuto -> special_function .)
    PRINT           reduce using rule 45 (estatuto -> special_function .)
    VAR             reduce using rule 45 (estatuto -> special_function .)
    WHILE           reduce using rule 45 (estatuto -> special_function .)
    DO              reduce using rule 45 (estatuto -> special_function .)
    PENUP           reduce using rule 45 (estatuto -> special_function .)
    PENDOWN         reduce using rule 45 (estatuto -> special_function .)
    ERASE           reduce using rule 45 (estatuto -> special_function .)
    TURNLEFT        reduce using rule 45 (estatuto -> special_function .)
    TURNRIGHT       reduce using rule 45 (estatuto -> special_function .)
    MOVE            reduce using rule 45 (estatuto -> special_function .)
    RETURN          reduce using rule 45 (estatuto -> special_function .)
    CERRAR_LLAVE    reduce using rule 45 (estatuto -> special_function .)


state 55

    (46) estatuto -> var_body .
